# rgbd_grasp_sdk

./: .gitignore  .gitmodules  LICENSE  MODEL_WEIGHTS.md  README.md  THIRD_PARTY_LICENSES.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  fastsam_rng.yaml  smoke_yolo_rng.yaml  yolo_rng.yaml
docs/: architecture.md  demo_data.md  deployment.md  installation.md  model_adapters.md  smoke_tests.md  transform_contract.md
docs/superpowers/plans/: 2026-06-13-rgbd-grasp-sdk-phase2.md  2026-06-14-mask-aware-tf-publisher.md  2026-06-19-ultralytics-style-python-api.md
docs/superpowers/specs/: 2026-06-14-ranking-publisher-deployment-design.md  2026-06-19-ultralytics-style-python-api-design.md
examples/: run_image_pair.py
requirements/: base.txt  dev.txt  fastsam.txt  rng-common.txt  rng-cpu.txt  rng-cu121.txt  yolo.txt
scripts/: check_runtime_deps.py  prepare_graspnet_demo.py  setup_env.sh  smoke_real_gpu.sh
src/rgbd_grasp_sdk/: __init__.py  errors.py  model.py  timing.py  types.py
src/rgbd_grasp_sdk/benchmarking/: __init__.py  stats.py
src/rgbd_grasp_sdk/compat/: __init__.py  pytorch3d_ops.py
src/rgbd_grasp_sdk/config/: __init__.py  loader.py  schema.py
src/rgbd_grasp_sdk/datasets/: __init__.py  manifest.py
src/rgbd_grasp_sdk/evaluation/: __init__.py  metrics.py
src/rgbd_grasp_sdk/filtering/: __init__.py  mask_filter.py
src/rgbd_grasp_sdk/grasping/: __init__.py  _rng_import.py  base.py  factory.py  rng_adapter_utils.py  rng_predictor.py
src/rgbd_grasp_sdk/io/: __init__.py  image_io.py  intrinsics_io.py
src/rgbd_grasp_sdk/masks/: __init__.py  postprocess.py
src/rgbd_grasp_sdk/pipeline/: __init__.py  grasp_pipeline.py
src/rgbd_grasp_sdk/publishers/: __init__.py  base.py  json_file.py  stdout.py  transform_file.py  transform_message.py
src/rgbd_grasp_sdk/ranking/: __init__.py  base.py  default_ranker.py  factory.py  mask_aware_ranker.py
src/rgbd_grasp_sdk/segmentation/: __init__.py  _fastsam_import.py  base.py  factory.py  fastsam_segmenter.py  yolo_segmenter.py
src/rgbd_grasp_sdk/serialization/: __init__.py  result_json.py
src/rgbd_grasp_sdk/transforms/: __init__.py  pose.py
src/rgbd_grasp_sdk/visualization/: __init__.py  grasp_scene.py
tests/: test_benchmarking.py  test_check_runtime_deps.py  test_cli_contract.py  test_compat_fallbacks.py  test_config.py  test_evaluation.py  test_fastsam_segmenter.py  test_manifest_dataset.py  test_mask_aware_ranker.py  test_mask_filter.py  test_mask_postprocess.py  test_model_api.py  test_optional_imports.py  test_pipeline_contracts.py  test_prepare_graspnet_demo.py  test_publishers.py  test_result_json.py  test_rng_import.py  test_rng_predictor.py  test_visualization.py  test_yolo_segmenter.py
