[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbd-grasp-sdk"
version = "0.1.0"
description = "Modular RGB-D target segmentation and 6DoF grasp prediction SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23,<2.0",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
