[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbd-grasp-sdk"
version = "0.1.0"
description = "Modular RGB-D target segmentation and 6DoF grasp prediction SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23,<2.0",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
yolo = [
  "ultralytics>=8.3",
]
fastsam = [
  "torch>=1.11",
  "torchvision>=0.12",
  "ftfy",
  "regex",
  "tqdm",
]
rng = [
  "torch>=1.11",
  "torchvision>=0.12",
  "open3d",
  "transforms3d",
  "scikit-image",
  "trimesh",
  "numba>=0.61,<0.62",
  "cupoch",
  "autolab_core",
  "cvxopt",
  "matplotlib>=3.10",
]
all-models = [
  "rgbd-grasp-sdk[yolo,fastsam,rng]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires model weights or GPU-capable model dependencies",
]
