[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbd-grasp-sdk"
version = "0.1.0"
description = "Modular RGB-D target segmentation and 6DoF grasp prediction SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Han"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23,<2.0",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
yolo = [
  "ultralytics>=8.3",
]
fastsam = [
  "torch>=1.11",
  "torchvision>=0.12",
  "ftfy",
  "regex",
  "tqdm",
]
rng = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "open3d",
  "transforms3d",
  "scikit-image",
  "trimesh",
  "numba>=0.61,<0.62",
  "cupoch",
  "autolab_core",
  "cvxopt",
  "matplotlib>=3.10",
  "iopath",
  "grasp_nms",
]
all-models = [
  "rgbd-grasp-sdk[yolo,fastsam,rng]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires model weights or GPU-capable model dependencies",
]
